Release/Master/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: master-node-app-deployment-v72-final
  namespace: dev
  labels:
    app: master-node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: master-node-app
  template:
    metadata:
      labels:
        app: master-node-app
    spec:
      serviceAccountName: master-node-app-sa
      containers:
      - name: master-node-app
        image: mfadd/master-node:v278-iot-deployment
        imagePullPolicy: Always
        command: ["/usr/local/bin/python"]
        args:
          [
            "-m", "gunicorn",
            "-w", "1",
            "--bind", "0.0.0.0:5000",
            "app:app"
          ]
        ports:
        - containerPort: 5000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
            scheme: HTTP
            httpHeaders:
            - name: Authorization
              value: "Bearer MySecureToken1234"
          initialDelaySeconds: 40
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
            scheme: HTTP
            httpHeaders:
            - name: Authorization
              value: "Bearer MySecureToken1234"
          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 3
          failureThreshold: 6
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
